Introduced debounce and promise cancel

--- a/index.scss
+++ b/index.scss
@@ -1,1 +1,6 @@
 @import '@material/button/mdc-button';
+@import '@material/button/mixins';
+
+.mdc-button {
+  @include mdc-button-shape-radius(50%);
+}
