--- a/style.css
+++ b/style.css
@@ -1,28 +1,63 @@
 html, body {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 body {
   width: 100%;
   height: 100%;
+  color: rgba(0, 0, 0, 0.84);
 }
 
 .debug-container {
   position: absolute;
-  top: 48px;
-  left: 48px;
+  top: 56px;
+  left: 24px;
+}
+
+.app-title {
+  font-size: 24px;
+  margin-left: 24px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 .app {
+  height: 100%;
   display: flex;
   justify-content: center;
   margin-top: 48px;
 }
 
+.app-preview {
+  flex-grow: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+}
+
+.app-editor {
+  flex-grow: 1;
+  height: 100%;
+  box-sizing: border-box;
+  border-left: 1px solid rgba(0, 0, 0, .24);
+  padding-left: 24px;
+  outline: none;
+  width: 50%;
+}
+
 .debug-status,
 .debug-substatus {
   display: block;
+}
+
+.debug-status-with-preview {
+  position: absolute;
+  right: 48px;
+  top: 12px;
 }
 
 .hidden {
